update UI with new layout

--- a/AzureMediaConsole/App.config
+++ b/AzureMediaConsole/App.config
@@ -1,13 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
   <appSettings>
     <add key="accountName" value="baby" />
     <add key="accountKey" value="7RZV9Om6NPT0zHtYN/vW1SJl69tnhr5PLEDrWSsxz2o=" />
     <add key="SupportFolder" value="C:\Users\zhzhang\Downloads\mediaupload" />
-    <add key="" value="" />
-    <add key="" value="" />
-    <add key="" value="" />
-    <add key="" value="" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
