--- a/Boy8/Web.Release.config
+++ b/Boy8/Web.Release.config
@@ -19,6 +19,10 @@
       connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Boy8-20140618114429.mdf;Initial Catalog=aspnet-Boy8-20140618114429;Integrated Security=True" providerName="System.Data.SqlClient"
       xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>-->
+  <connectionStrings>
+    <add  name="DefaultConnection" connectionString="Server=tcp:bw4lfrigq6.database.windows.net,1433;Database=boy8_db;User ID=Boy7DB@bw4lfrigq6;Password=suli@2013;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;"
+     providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
   <appSettings>
 
     <add key="GoogleClientID" value="729988413782-cfhk0oescuouklj0tjs645qgkauobfei.apps.googleusercontent.com"
