--- a/Boy8/Web.config
+++ b/Boy8/Web.config
@@ -23,6 +23,7 @@
     <add key="FacebookClientSecret" value="577d3c15de6ca70437b60336dd01dc30" />
     <add key="TwitterClientID" value="d3nK7tbc7dnSCwrv7M9NHn0Ot" />
     <add key="TwitterClientSecret" value="Ir1YCMC0DuWEsVLDEA27DQFwKT0gekkRnSJiJlM8lFUFwGprCi" />
+    <add key="MigrateDatabaseToLatestVersion" value="true" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
