--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\AzureMediaConsole\packages.config" />
   <repository path="..\AzureMediaLib\packages.config" />
   <repository path="..\BabybookAPI\packages.config" />
   <repository path="..\Boy8\packages.config" />
