--- a/Boy8/Web.Release.config
+++ b/Boy8/Web.Release.config
@@ -29,7 +29,7 @@
          xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="GoogleClientSecret" value="6c3FrrOxZsyldXgydwPn55ad"
          xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-    <add key="FacebookClientID" value="306017239565994" 
+    <add key="FacebookClientID" value="306017239565994"
          xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="FacebookClientSecret" value="629d8ec758ed4f21eaf714c383fe6468"
          xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
@@ -51,5 +51,6 @@
         <error statusCode="500" redirect="InternalError.htm"/>
       </customErrors>
     -->
+    <customErrors mode="Off" xdt:Transform="Replace"/>
   </system.web>
 </configuration>
