--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\AzureMediaConsole\packages.config" />
   <repository path="..\AzureMediaLib\packages.config" />
+  <repository path="..\AzureStorage\packages.config" />
   <repository path="..\BabybookAPI\packages.config" />
   <repository path="..\Boy8\packages.config" />
   <repository path="..\MyExample\packages.config" />
