--- a/Boy8/Boy8.csproj
+++ b/Boy8/Boy8.csproj
@@ -118,16 +118,23 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\WindowsAzure.Storage.4.1.0\lib\net40\Microsoft.WindowsAzure.Storage.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Services.Client" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Net.Http.Formatting, Version=5.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.1.2\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.0\lib\net45\System.Net.Http.Formatting.dll</HintPath>
     </Reference>
     <Reference Include="System.Spatial, Version=5.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Spatial.5.6.0\lib\net40\System.Spatial.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Cors">
+      <HintPath>..\packages\Microsoft.AspNet.Cors.5.2.0\lib\net45\System.Web.Cors.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -139,13 +146,16 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.1.2\lib\net45\System.Web.Helpers.dll</HintPath>
     </Reference>
-    <Reference Include="System.Web.Http, Version=5.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="System.Web.Http, Version=5.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.1.2\lib\net45\System.Web.Http.dll</HintPath>
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.0\lib\net45\System.Web.Http.dll</HintPath>
     </Reference>
-    <Reference Include="System.Web.Http.WebHost, Version=5.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="System.Web.Http.Cors">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Cors.5.2.0\lib\net45\System.Web.Http.Cors.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Http.WebHost, Version=5.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.5.1.2\lib\net45\System.Web.Http.WebHost.dll</HintPath>
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.5.2.0\lib\net45\System.Web.Http.WebHost.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.Mvc, Version=5.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -188,10 +198,6 @@
     </Reference>
     <Reference Include="System.Net.Http.WebRequest">
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <Private>True</Private>
-      <HintPath>..\packages\Newtonsoft.Json.5.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="WebGrease">
       <Private>True</Private>
       <HintPath>..\packages\WebGrease.1.5.2\lib\WebGrease.dll</HintPath>
@@ -216,6 +222,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="BLL\BabyStorage.cs" />
     <Compile Include="BLL\UserLogic.cs" />
+    <Compile Include="Controllers\WebAPI\ImagesController.cs" />
     <Compile Include="Controllers\WebAPI\ProdController.cs" />
     <Compile Include="Controllers\WebAPI\UploadController.cs" />
     <Compile Include="DAL\Baby7DbContext.cs" />
@@ -260,17 +267,9 @@
     <Compile Include="Migrations\201407042225034_includeMedial.Designer.cs">
       <DependentUpon>201407042225034_includeMedial.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201407082158283_AddBaby.cs" />
-    <Compile Include="Migrations\201407082158283_AddBaby.Designer.cs">
-      <DependentUpon>201407082158283_AddBaby.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201407082315335_UpdateBaby.cs" />
-    <Compile Include="Migrations\201407082315335_UpdateBaby.Designer.cs">
-      <DependentUpon>201407082315335_UpdateBaby.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201407082330005_ParentBabyRelation.cs" />
-    <Compile Include="Migrations\201407082330005_ParentBabyRelation.Designer.cs">
-      <DependentUpon>201407082330005_ParentBabyRelation.cs</DependentUpon>
+    <Compile Include="Migrations\201408052329596_updateBaby.cs" />
+    <Compile Include="Migrations\201408052329596_updateBaby.Designer.cs">
+      <DependentUpon>201408052329596_updateBaby.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\Baby.cs" />
     <Compile Include="Models\Comment.cs" />
@@ -469,14 +468,8 @@
     <EmbeddedResource Include="Migrations\201407042225034_includeMedial.resx">
       <DependentUpon>201407042225034_includeMedial.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201407082158283_AddBaby.resx">
-      <DependentUpon>201407082158283_AddBaby.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201407082315335_UpdateBaby.resx">
-      <DependentUpon>201407082315335_UpdateBaby.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201407082330005_ParentBabyRelation.resx">
-      <DependentUpon>201407082330005_ParentBabyRelation.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201408052329596_updateBaby.resx">
+      <DependentUpon>201408052329596_updateBaby.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
