--- a/Boy8/packages.config
+++ b/Boy8/packages.config
@@ -6,16 +6,18 @@
   <package id="jQuery" version="1.9.0" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.12.0" targetFramework="net45" />
   <package id="jQuery1" version="1.11.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi" version="5.1.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.1.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.1.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net45" />
   <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net45" />
@@ -33,7 +35,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.3" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net45" />
